Fix widget spacing inside columns

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -76,13 +76,9 @@
     .columns-four-second,
     .columns-four-third,
     .columns-four-fourth {
-        .widget:not([data-name="row"]) {
+        .widget:not([data-name="row"]), {
             width: auto;
             margin: 10px 0;
-            @media only screen and (min-width: 1140px) {
-                width: auto;
-                margin: 0 auto 20px;
-            }
         }
     }
 }
